# ComputerGraphics

./: .clang-format
Assignment0_CPlusPlus/: README.md
Assignment0_CPlusPlus/include/: PPM.h
Assignment0_CPlusPlus/src/: main.cpp  ppm.cpp
Assignment1_MathFoundations1/: README.md
Assignment1_MathFoundations1/include/: Matrix4f.h  Vector4f.h
Assignment1_MathFoundations1/src/: main.cpp
Assignment3_ModelParser/: Application.cpp  Application.h  BasicWidget.cpp  BasicWidget.h  CMakeLists.txt  ObjLoader.cpp  ObjLoader.h  README.md  main.cpp
Assignment4_TexturedModel/: CMakeLists.txt  README.md
Assignment4_TexturedModel/app/: CMakeLists.txt
Assignment4_TexturedModel/app/src/: BasicWidget.cpp  main.cpp
Assignment4_TexturedModel/libherb/: CMakeLists.txt
Assignment4_TexturedModel/libherb/include/: MtlLoader.h  ObjLoader.h  ObjMesh.h  Renderable.h  VboIndexer.h
Assignment4_TexturedModel/libherb/src/: MtlLoader.cpp  ObjLoader.cpp  ObjToVboIdx.h  Renderable.cpp  Texture.cpp
Assignment5_NormalMappedModel/: README.md
Assignment5_NormalMappedModel/app/src/: App.cpp  App.h  BasicWidget.cpp  BasicWidget.h
Assignment5_NormalMappedModel/libherb/: CMakeLists.txt
Assignment5_NormalMappedModel/libherb/include/: Light.h  MtlLoader.h  ObjLoader.h  ObjMesh.h  Renderable.h  Texture.h
Assignment5_NormalMappedModel/libherb/shaders/: frag.glsl  vert.glsl
Assignment5_NormalMappedModel/libherb/src/: Light.cpp  ObjLoader.cpp  ObjMesh.cpp  Renderable.cpp
Assignment5_NormalMappedModel/objects/tester/: cube.mtl  grid.ppm
Assignment6_SceneGraphOrParticleSystem/: README.md
Assignment6_SceneGraphOrParticleSystem/ParticleSystem/: README.md
Assignment6_SceneGraphOrParticleSystem/ParticleSystem/app/src/: App.cpp  App.h  BasicWidget.cpp  BasicWidget.h  main.cpp
Assignment6_SceneGraphOrParticleSystem/ParticleSystem/libherb/: CMakeLists.txt
Assignment6_SceneGraphOrParticleSystem/ParticleSystem/libherb/include/: Renderable.h  TexturedQuad.h
Assignment6_SceneGraphOrParticleSystem/ParticleSystem/libherb/src/: Camera.cpp  Emitter.cpp  MtlLoader.cpp  ObjMesh.cpp  Renderable.cpp  TexturedQuad.cpp  Util.cpp
Assignment6_SceneGraphOrParticleSystem/SceneGraph/: README.md
Assignment6_SceneGraphOrParticleSystem/SceneGraph/app/src/: App.cpp  BasicWidget.cpp  BasicWidget.h  main.cpp
Assignment6_SceneGraphOrParticleSystem/SceneGraph/libherb/: CMakeLists.txt
Assignment6_SceneGraphOrParticleSystem/SceneGraph/libherb/data/: norm.ppm
Assignment6_SceneGraphOrParticleSystem/SceneGraph/libherb/include/: Emitter.h  Particle.h  Planet.h  Renderable.h  Scene.h  Sphere.h  Util.h
Assignment6_SceneGraphOrParticleSystem/SceneGraph/libherb/src/: ObjLoader.cpp  ObjToVboIdx.h  Particle.cpp  Renderable.cpp  Scene.cpp  Sphere.cpp  TexturedQuad.cpp
Lab10_FBOs/: BasicWidget.cpp  README.md  Renderable.cpp  TerrainQuad.cpp
Lab3_Starfield/: README.md  StarList.cpp  StarList.h
Lab5_Part1/: BasicWidget.cpp  README.md
Lab5_Part2/: BasicWidget.cpp  BasicWidget.h  README.md
Lab6_ColorAndTransforms/: BasicWidget.cpp  README.md
Lab7_AbstractionsAndTextures/: BasicWidget.cpp  README.md  vert.glsl
Lab8_CameraAndIllumination/: BasicWidget.cpp  BasicWidget.h  Camera.cpp  PointLight.h  README.md  Renderable.cpp  Renderable.h  frag.glsl
Lab9_Heightfields/: BasicWidget.cpp  Camera.cpp  README.md  TerrainQuad.cpp  vert.glsl
lab0_setup/: README.md
lab0_setup/part4/: example.cpp
